# embedding-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  build.sh  scaffold.yaml
examples/demo/: CMakeLists.txt  build.sh
examples/demo/rapidjson/: CMakeLists.txt  main_rapidjson.cpp  main_rapidjson_dom.cpp
examples/demo/src/: parse_sentences.c
include/embedding-library/: float.h  int16.h  int8.h  int8_embedding_table.h
include/embedding-library/arm/: float.h  int8.h
include/embedding-library/fallback/: float.h  int8.h
include/embedding-library/x86/: float.h  int8.h
src/: int8_embedding_table.c
tests/: CMakeLists.txt
